# urbanos

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  requirements-gpu.txt  requirements.txt
config/: nemoclaw.mcp.json
demo_data/: road_restrictions__downtown.csv  tmc__downtown.csv
docs/: DEMO_SCRIPT.md  HANDOFF.md  ON_THE_BOX.md  PITCH.md  REMOTE_ACCESS.md  tailscale-policy.hujson
fixtures/: address_resolution.sample.jsonl  dinesafe__sample.csv
native/: Cargo.toml  pyproject.toml
native/src/: lib.rs
scripts/: bench_urbanos_accel.py  build_demo_slice.py  build_tiles.sh  catalog.py  dev.sh  download_data.py  e2e_click.py  fetch_gtfs_supply.py  fetch_road_restrictions.py  fetch_tmc.py  fetch_ttc_boardings.py  finetune_address_resolution.py  gpu_check.py  gpu_check_wsl.sh  llm_check.py  prototype_lenses.py  screenshot_map.py  serve_trtllm.sh
tests/: test_analyze_contract.py  test_api.py  test_app_decoupling.py  test_artifacts.py  test_civic_api_contract.py  test_civic_ui_offline.py  test_ckan_client.py  test_congestion_nowcast.py  test_data_driven_properties.py  test_demo_slice.py  test_digest_cache.py  test_digest_label.py  test_fixtures.py  test_footfall.py  test_gpu_check_gating.py  test_gpu_seams.py  test_graph.py  test_learned_dynamics.py  test_llm_client.py  test_loader.py  test_mcp.py  test_mobility_demand.py  test_mobility_demand_report.py  test_narrator_quality.py  test_normalize.py  test_road_disruption.py  test_supervisor.py  test_timeseries_counts.py  test_transit_load.py  test_transit_supply.py  test_ttc_boardings.py  test_two_index.py  test_urban_accel.py  test_urban_api.py  test_urban_api_contract.py  test_urban_api_unified.py  (+15 more)
(+112 files in other folders)
